tests/transpiler/x/swift/query_sum_select.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/055/main.swift:6:24: error: value of type 'Int' has no member 'reduce'
 4 | for n in nums {
 5 |     if (n > 1) {
 6 |         _res.append((n.reduce(0,+)))
   |                        `- error: value of type 'Int' has no member 'reduce'
 7 |     }
 8 | }
