tests/transpiler/x/swift/query_sum_select.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:20 GMT+7
let nums = [1, 2, 3]
let result = ({ var _res: [[String: Any]] = []
for n in nums {
    if (n > 1) {
        _res.append((n.reduce(0,+)))
    }
}
return _res })()
print(result)
